fix(card): remove overflow hidden for Safari fix (#107)

--- a/packages/core/src/components/card/_card.scss
+++ b/packages/core/src/components/card/_card.scss
@@ -10,7 +10,6 @@
     width: 100%;
     border-radius: $ray-border-radius;
     background-color: $ray-color-white;
-    overflow: hidden;
     display: flex;
     flex-direction: column;
     position: relative;
